# ASANAppeal

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  abuse_protection.py  audit.py  auth.py  config.py  evaluation.py  evidence_store.py  image_understanding.py  lifecycle.py  local_ml.py  local_reasoning.py  main.py  observability.py  ollama_client.py  privacy.py  provenance.py  repository.py  verification_reasoning.py  video_processing.py
app/models/: api.py  domain.py
app/providers/: __init__.py  base.py  gemini_provider.py  heuristic.py  local_provider.py  openai_provider.py  structured_provider.py
app/services/: drafting.py  explanation.py  intake.py  orchestration.py  priority.py  review.py  routing.py  verification.py  workflow.py
app/ui/: app.js  index.html  styles.css
data/evals/: intake_gold.jsonl  priority_gold.jsonl  routing_gold.jsonl  verification_gold.jsonl
data/local_ml/: priority_examples.jsonl  routing_examples.jsonl
tests/: conftest.py  test_api.py  test_evaluation.py  test_gemini_provider.py  test_local_ml.py  test_local_provider.py  test_openai_provider.py  test_repository.py  test_review_service.py
